@@ -3,6 +3,7 @@ Version 5.9.17
 - Fixed signed modulus for 64 bit integers
 - Fixed a bug in varargs handling for 64 bit values in bytecode
 - Fixed output of C boolean operators in bytecode
+- Fixed some problems with 32 to 64 bit casts in ASM output
 
 Version 5.9.16
 - Added UNION classes to BASIC
